# fastapi-passkeys

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
concepts/: index.html
docs/: concepts.md  index.md  migration.md  quickstart.md  reference.md  security.md  storage.md
examples/: app.py
migration/: index.html
quickstart/: index.html
reference/: index.html
search/: search_index.json
security/: index.html
src/fastapi_passkeys/: __init__.py  _b64.py  audit.py  config.py  exceptions.py
src/fastapi_passkeys/api/: __init__.py  dependencies.py  handlers.py  router.py  schemas.py
src/fastapi_passkeys/contrib/: __init__.py  _codec.py  memory.py  stateless.py
src/fastapi_passkeys/contrib/redis/: __init__.py
src/fastapi_passkeys/contrib/sqlalchemy/: __init__.py
src/fastapi_passkeys/domain/: __init__.py  enums.py  models.py
src/fastapi_passkeys/engine/: __init__.py  base.py  pywebauthn.py
src/fastapi_passkeys/repositories/: __init__.py  challenges.py  credentials.py
src/fastapi_passkeys/services/: __init__.py  authentication.py  clock.py  registration.py
src/fastapi_passkeys/testing/: __init__.py  authenticator.py  clock.py  contract.py
storage/: index.html
tests/: conftest.py  test_api.py  test_config_and_properties.py  test_contracts.py  test_flows.py  test_security.py
