[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-passkeys"
version = "0.1.2"
description = "Passkeys / WebAuthn authentication for FastAPI — secure by default, storage-agnostic, async-native."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Javlon Baxtiyorov" }]
keywords = [
    "fastapi",
    "passkeys",
    "webauthn",
    "fido2",
    "authentication",
    "passwordless",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "webauthn>=2.0",
]

[project.urls]
Homepage = "https://github.com/javlondevv/fastapi-passkeys"
Documentation = "https://javlondevv.github.io/fastapi-passkeys/"
Repository = "https://github.com/javlondevv/fastapi-passkeys"
Issues = "https://github.com/javlondevv/fastapi-passkeys/issues"
Changelog = "https://github.com/javlondevv/fastapi-passkeys/blob/main/CHANGELOG.md"

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy[asyncio]>=2.0"]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "fakeredis>=2.21",
    "ruff>=0.5",
    "mypy>=1.10",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]




[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_passkeys"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF", "S", "ANN"]
ignore = [
    "B008",   # FastAPI uses function calls (Depends) in argument defaults
    "ANN401", # allow typing.Any where genuinely needed at boundaries
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "S105", "S106"]  # asserts and lax typing are fine in tests
"src/fastapi_passkeys/testing/**" = ["S101"]  # the shipped contract suite uses asserts

[tool.ruff.lint.isort]
known-first-party = ["fastapi_passkeys"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["fastapi_passkeys"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["fakeredis.*", "asgi_lifespan.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=fastapi_passkeys --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["fastapi_passkeys"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install hatchling && hatchling build"
commit_parser = "conventional"

[tool.semantic_release.branches.main]
match = "main"
